feat: Implementar sistema bidireccional ML completo para automatización RRSS
✨ Nuevo sistema ML bidireccional que opera en todas las redes sociales:

🔄 Sistema Bidireccional ML Core:
- Motor bidireccional que orquesta flujo: datos → cloud → acciones → feedback
- Adquisición de datos en tiempo real de todas las plataformas
- Pipeline de procesamiento ML cloud con múltiples modelos
- Sistema de generación y ejecución de acciones automatizadas
- Control independiente de activación/desactivación por plataforma
- API Gateway completa para gestión y monitoreo del sistema

📱 Extensiones Redes Sociales:
- Instagram: Automación de likes, follows, comments, stories
- Twitter: Tweets, retweets, follows, engagement inteligente
- LinkedIn: Networking profesional, leads B2B, thought leadership
- WhatsApp: Customer service, marketing campaigns, crisis response

🤖 Funcionalidades ML:
- Predictor de engagement y detector viral
- Segmentación de audiencias y optimización de contenido
- Análisis de tendencias y competidores en tiempo real
- Detección de anomalías y oportunidades de crecimiento
- Retroalimentación continua para mejora del modelo

⚙️ Características Sistema:
- Modo dummy para desarrollo seguro (activado por defecto)
- Activación independiente por plataforma y capacidad
- API REST completa con documentación automática
- Manejo gracioso de dependencias opcionales
- Arquitectura modular y escalable
- Monitoreo de salud y métricas en tiempo real

🔧 Dependencias:
- Agregadas dependencias core: aiohttp, fastapi, uvicorn, pydantic
- Dependencias opcionales para producción comentadas
- Sistema funcional en modo dummy sin dependencias externas

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ psycopg2-binary==2.9.9
 httpx==0.25.0
 python-multipart==0.0.6
 pillow==10.1.0
+aiohttp==3.9.0
 
 # ML dependencies
 ultralytics==8.0.196
@@ -21,3 +22,11 @@ scikit-learn==1.3.2
 prometheus-client==0.18.0
 grafana-api==1.0.3
 python-json-logger==2.0.7
+
+# Optional social media dependencies (uncomment for production)
+# instagrapi>=1.16.0
+# tweepy>=4.12.0
+# linkedin_api>=2.0.0
+
+# Optional cloud dependencies (uncomment for production)
+# boto3>=1.26.0
