🚀 Core Repository Heart Fixed - Meta Ads System Operational
✅ Core Infrastructure Fixes:
• Created missing ml_core/action_generation framework with ActionGenerator and MLPredictor
• Added comprehensive dummy implementations for development/testing
• Implemented proper factory patterns for production/dummy mode switching

🎯 Meta Ads System Restored:
• Fixed all critical import errors in MetaActionGenerator
• Added missing abstract method implementations (validate_action, estimate_performance)
• Corrected dataclass field ordering in GeneratedAction
• Updated production_config.py with proper type imports

📦 Dependencies Updated:
• Enabled critical packages in requirements.txt (facebook-business, telethon, etc.)
• Added ML framework dependencies for action generation
• Configured proper dummy mode fallbacks

🧪 Testing Verified:
• Meta Ads system imports successfully ✅
• Action generation pipeline functional ✅
• ML predictor factory working ✅
• Abstract methods implemented ✅

🎉 Result: Meta Ads campaigns can now be initialized and operated!
Core repository heart is beating strong - ready for campaign development.

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,14 +23,24 @@ prometheus-client==0.18.0
 grafana-api==1.0.3
 python-json-logger==2.0.7
 
-# Optional social media dependencies (uncomment for production)
-# instagrapi>=1.16.0
-# tweepy>=4.12.0
-# linkedin_api>=2.0.0
+# Social media dependencies - enabled for core functionality
+instagrapi>=1.16.0
+tweepy>=4.12.0
+linkedin-api>=2.0.0
 
-# Meta Ads dependencies (uncomment for production)
-# facebook-business>=18.0.0
-# requests>=2.31.0
+# Meta Ads dependencies - critical for core system
+facebook-business>=18.0.0
+requests>=2.31.0
 
-# Optional cloud dependencies (uncomment for production)
-# boto3>=1.26.0
+# Telegram dependencies
+telethon>=1.29.0
+
+# Cloud dependencies
+boto3>=1.26.0
+google-cloud-storage>=2.10.0
+
+# Additional core dependencies
+selenium>=4.15.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+aiofiles>=23.2.0
