--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Core dependencies
+# Core API Framework
 fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
@@ -10,37 +10,70 @@ python-multipart==0.0.6
 pillow==10.1.0
 aiohttp==3.9.0
 
-# ML dependencies
+# ML and Computer Vision - CORE SYSTEM
 ultralytics==8.0.196
 torch==2.1.0
 torchvision==0.16.0
+opencv-python>=4.8.0
 numpy==1.26.1
 pandas==2.1.2
 scikit-learn==1.3.2
+matplotlib>=3.7.0
+seaborn>=0.12.0
 
-# Monitoring
+# Telegram Bot System - CRITICAL
+telethon>=1.29.0
+cryptg>=0.4.0
+
+# Documentation and Analytics Dashboard
+streamlit>=1.28.0
+plotly>=5.15.0
+GitPython>=3.1.0
+python-dateutil>=2.8.0
+
+# Monitoring and Metrics
 prometheus-client==0.18.0
 grafana-api==1.0.3
 python-json-logger==2.0.7
 
-# Social media dependencies - enabled for core functionality
+# Social Media Automation - Core functionality
 instagrapi>=1.16.0
 tweepy>=4.12.0
 linkedin-api>=2.0.0
 
-# Meta Ads dependencies - critical for core system
+# Meta Ads Integration - Critical for revenue
 facebook-business>=18.0.0
 requests>=2.31.0
 
-# Telegram dependencies
-telethon>=1.29.0
+# YouTube API Integration
+google-api-python-client>=2.100.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
 
-# Cloud dependencies
-boto3>=1.26.0
-google-cloud-storage>=2.10.0
-
-# Additional core dependencies
+# Browser Automation (Device Farm)
 selenium>=4.15.0
+undetected-chromedriver>=3.5.0
+playwright>=1.40.0
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
+
+# GoLogin Integration (available when exiting dummy mode)
+# gologin-api  # Custom proxy management
+
+# Cloud Storage and Processing
+boto3>=1.26.0
+google-cloud-storage>=2.10.0
 aiofiles>=23.2.0
+
+# Development and Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.7.0
+flake8>=6.0.0
+tqdm>=4.65.0
+
+# Production Utilities
+gunicorn>=21.2.0
+schedule>=1.2.0
+psutil>=5.9.0
+pyyaml>=6.0
