feat: Add Docker V3 infrastructure with Dockerfiles and API
- Create ml-core-v3.Dockerfile (YOLOv8 + ML predictions)
- Create unified-orchestrator-v3.Dockerfile (main orchestration service)
- Create dashboard-v3.Dockerfile (Streamlit UI)
- Create unified_orchestrator_api.py (FastAPI service with /launch and /monitor-channel endpoints)
- Create dashboard_v3.py (Streamlit UI with 3 pages: Launch, Monitor, Analytics)
- Create build-and-deploy-v3.sh (automated build and deploy script)
- Update docker-compose-v3.yml to use new Dockerfiles
- Add health checks to all services
- Configure CORS for API
- Add environment variable support (DUMMY_MODE configurable)

API Endpoints:
- GET /health - System health check
- POST /launch - Launch viral campaign for single video
- POST /monitor-channel - Start 24/7 channel monitoring
- GET /analytics/{campaign_id} - Get campaign analytics
- POST /optimize/{campaign_id} - Optimize ongoing campaign

Dashboard Features:
- Launch Campaign page (video upload, artist info, budget config)
- Monitor Channel page (YouTube channel ID, auto-launch settings, thresholds)
- Analytics page (metrics and performance tracking)
- Real-time system status in sidebar

Docker Images:
- community-manager/ml-core:v3 (Python 3.11 + ultralytics + opencv)
- community-manager/unified-orchestrator:v3 (Python 3.11 + FastAPI)
- community-manager/dashboard:v3 (Python 3.11 + Streamlit)

Ready for production deployment with ./build-and-deploy-v3.sh

--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -36,12 +36,12 @@ services:
   ml-core:
     build:
       context: .
-      dockerfile: docker/Dockerfile.ml-core
+      dockerfile: docker/ml-core-v3.Dockerfile
     container_name: unified-ml-core
     ports:
       - "8000:8000"
     environment:
-      - DUMMY_MODE=false
+      - DUMMY_MODE=${DUMMY_MODE:-false}
       - ULTRALYTICS_ENABLED=true
       - YOLO_MODEL_PATH=/models/yolov8n_screenshot.pt
       - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-postgres123}@postgres:5432/community_manager
@@ -237,12 +237,12 @@ services:
   unified-orchestrator:
     build:
       context: .
-      dockerfile: docker/Dockerfile.unified-v3
+      dockerfile: docker/unified-orchestrator-v3.Dockerfile
     container_name: unified-orchestrator
     ports:
       - "10000:10000"
     environment:
-      - DUMMY_MODE=false
+      - DUMMY_MODE=${DUMMY_MODE:-false}
       - ML_CORE_URL=http://ml-core:8000
       - META_ADS_URL=http://meta-ads-manager:9000
       - PIXEL_TRACKER_URL=http://pixel-tracker:9001
@@ -279,7 +279,7 @@ services:
   dashboard:
     build:
       context: .
-      dockerfile: docker/Dockerfile.dashboard
+      dockerfile: docker/dashboard-v3.Dockerfile
     container_name: unified-dashboard
     ports:
       - "8501:8501"
@@ -289,7 +289,7 @@ services:
       - N8N_URL=http://n8n:5678
       - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-postgres123}@postgres:5432/community_manager
     volumes:
-      - ./community_manager_dashboard.py:/app/dashboard.py
+      - ./dashboard_v3.py:/app/dashboard_v3.py
       - ./scripts:/app/scripts
     networks:
       - unified-network
