--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,68 @@
-# Environment variables for Docker Compose
-# Copy this file to .env and fill in your actual values
+# TikTok ML System v4 - Production Environment Variables
+# Copy this file to .env and fill in your actual credentials
 
 # === SYSTEM CONFIGURATION ===
-DUMMY_MODE=true
-LOG_LEVEL=INFO
+PRODUCTION_MODE=true
+LOG_level=INFO
+DEBUG=false
 
-# === DATABASE CONFIGURATION ===
-DB_USER=tiktok_user
-DB_PASSWORD=change_this_password_in_production
-DB_NAME=tiktok_automation
-DB_HOST=database
-DB_PORT=5432
+# === CORE API CONFIGURATION ===
+API_HOST=0.0.0.0
+API_PORT=8000
+API_WORKERS=1
+API_SECRET_KEY=your_super_secret_api_key_here_min_32_chars
+JWT_SECRET=your_jwt_secret_key_here_min_32_chars
 
-# === REDIS CONFIGURATION ===
-REDIS_PASSWORD=change_this_password_in_production
-REDIS_HOST=redis
-REDIS_PORT=6379
+# === SUPABASE CONFIGURATION ===
+# Required for all metrics storage and database operations
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_KEY=your_supabase_service_key
 
-# === TELEGRAM CONFIGURATION ===
-# Get these from https://my.telegram.org
-TELEGRAM_API_ID=your_api_id_here
-TELEGRAM_API_HASH=your_api_hash_here
-TELEGRAM_PHONE=+1234567890
+# === YOUTUBE API CONFIGURATION ===
+# Required for YouTube analytics - Get from Google Cloud Console
+YOUTUBE_API_KEY=your_youtube_data_api_key
+YOUTUBE_CHANNEL_IDS=UCxxxxxx,UCyyyyyy,UCzzzzzz
 
 # === META ADS CONFIGURATION ===
-# Get these from https://developers.facebook.com
+# Required for Meta advertising features - Get from https://developers.facebook.com
 META_APP_ID=your_app_id_here
 META_APP_SECRET=your_app_secret_here
-META_ACCESS_TOKEN=your_access_token_here
-META_AD_ACCOUNT_ID=act_1234567890
-META_PAGE_ID=your_page_id_here
-META_PIXEL_ID=your_pixel_id_here
+META_ACCESS_TOKEN=your_long_lived_access_token
+META_PIXEL_ID=your_meta_pixel_id
 
-# === GOLOGIN CONFIGURATION ===
-GOLOGIN_API_TOKEN=your_gologin_token_here
+# === SPOTIFY API CONFIGURATION ===
+# Required for Spotify analytics - Get from Spotify Developer Dashboard
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+SPOTIFY_ARTIST_IDS=4UXqAaa6dQYAk18Lv7PEgX,1vCWHaC5f2uS3yhpwWbIA6
+SPOTIFY_PLAYLIST_IDS=37i9dQZF1DXcBWIGoYBM5M,37i9dQZF1DX0XUsuxWHRQd
+
+# === LANDING PAGE CONFIGURATION ===
+# Required for conversion tracking and performance monitoring
+LANDING_PAGE_URLS=https://your-landing-page.com,https://your-second-page.com
 
 # === ML CONFIGURATION ===
-ML_MODEL_PATH=/app/models
-YOLO_MODEL=yolov8n.pt
+# Ultralytics YOLOv8 model configuration
+ULTRALYTICS_MODEL=yolov8n.pt
+ML_MODEL_PATH=/app/data/models
+MAX_UPLOAD_SIZE=52428800
 CONFIDENCE_THRESHOLD=0.5
 
-# === MONITORING ===
-ENABLE_PROMETHEUS=false
-ENABLE_GRAFANA=false
+# === n8n CONFIGURATION ===
+# Required for workflow automation and orchestration
+N8N_WEBHOOK_BASE_URL=https://your-n8n-instance.com/webhook
+N8N_API_KEY=your_n8n_api_key
 
-# === SECURITY ===
-JWT_SECRET=change_this_secret_in_production
-ENCRYPTION_KEY=change_this_key_in_production
+# === DATABASE CONFIGURATION ===
+# Optional - uses Supabase by default
+DATABASE_URL=postgresql://user:pass@host:port/dbname
 
-# === NETWORKING ===
-NGINX_HTTP_PORT=80
-NGINX_HTTPS_PORT=443
-ML_CORE_PORT=8000
-DASHBOARD_PORT=8501
-META_ADS_PORT=8002
+# === DEPLOYMENT CONFIGURATION ===
+# Railway deployment settings
+RAILWAY_STATIC_URL=https://your-app.railway.app
+PORT=8000
+
+# Docker settings
+DOCKER_ENV=production
+HEALTHCHECK_INTERVAL=30s
