--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,51 @@ black>=23.7.0
 flake8>=6.0.0
 tqdm>=4.65.0
 
+# Dashboard and Visualization - Added for viral analysis dashboards
+streamlit>=1.28.0
+plotly>=5.17.0
+dash>=2.14.0
+dash-bootstrap-components>=1.5.0
+kaleido>=0.2.1
+
+# Data Processing and Analysis - Enhanced
+pandas>=2.1.2
+numpy>=1.26.1
+scipy>=1.11.0
+openpyxl>=3.1.2
+xlsxwriter>=3.1.9
+
+# API Integration and Web Services
+supabase>=2.0.0
+googleapiclient>=2.100.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+
+# Social Media APIs - Enhanced
+youtube-dl>=2021.12.17
+yt-dlp>=2023.10.13
+instaloader>=4.10.0
+tiktok-api>=5.3.0
+
+# Time and Date Processing
+python-dateutil>=2.8.0
+pytz>=2023.3
+arrow>=1.3.0
+
+# Async and Concurrent Processing
+asyncio>=3.4.3
+aiofiles>=23.2.0
+concurrent-futures>=3.1.1
+
+# File and Path Utilities
+pathlib>=1.0.1
+os-sys>=2.1.4
+
+# Random and Statistics
+random2>=1.0.1
+statistics>=1.0.3.5
+
 # Production Utilities
 gunicorn>=21.2.0
 schedule>=1.2.0
