--- a/railway-docker-config.json
+++ b/railway-docker-config.json
@@ -5,10 +5,8 @@
     "dockerfilePath": "Dockerfile"
   },
   "deploy": {
-    "numReplicas": 1,
+    "startCommand": "streamlit run ml_core/api/main.py --server.port $PORT --server.address 0.0.0.0",
     "restartPolicyType": "ON_FAILURE",
-    "healthcheckPath": "/health",
-    "healthcheckTimeout": 30,
-    "sleepApplication": false
+    "restartPolicyMaxRetries": 3
   }
 }
