--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pandas==2.1.2
 scikit-learn==1.3.2
 matplotlib>=3.7.0
 seaborn>=0.12.0
+joblib>=1.3.0
 
 # Telegram Bot System - CRITICAL
 telethon>=1.29.0
@@ -35,6 +36,7 @@ python-dateutil>=2.8.0
 prometheus-client==0.18.0
 grafana-api==1.0.3
 python-json-logger==2.0.7
+loguru>=0.7.0
 
 # Social Media Automation - Core functionality
 instagrapi>=1.16.0
@@ -92,6 +94,7 @@ googleapiclient>=2.100.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
+asyncpg>=0.29.0
 
 # Social Media APIs - Enhanced
 youtube-dl>=2021.12.17
