--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -113,6 +113,7 @@ jobs:
           org.opencontainers.image.source=https://github.com/${{ github.repository }}
           
     - name: 🔑 Log in to Docker Hub
+      if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
