--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -17,6 +17,7 @@ plotly==6.3.1
 requests==2.32.5
 python-dateutil==2.9.0
 cachetools==6.2.0
+python-multipart==0.0.6
 
 # Performance (optional)
 pathlib2>=2.3.0
