--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -4,6 +4,11 @@
 # Core Streamlit Dashboard
 streamlit==1.50.0
 
+# FastAPI Support (for ML API endpoints)
+fastapi==0.104.1
+uvicorn==0.24.0
+python-dotenv==1.0.0
+
 # Data Processing
 pandas==2.3.2
 numpy==2.3.2
