🚀 PRODUCTION RELEASE: Meta Ads Centric System Complete
✅ SISTEMA COMPLETO SIN DUMMY MODES:
- Meta Ads Engine (€500/month budget optimizado)
- ML Core YOLOv8 Production (análisis viral real)
- Device Farm ADB Real (10 dispositivos físicos)
- GoLogin Automation (30 perfiles reales)
- n8n Workflows (orquestación completa)
- Sistema Unificado de Producción

🔧 FIXES APLICADOS:
- JSON corregido en main_orchestrator.json
- AccountHealthMonitor clase creada
- Imports y factories actualizados
- Dockerfile optimizado para Railway
- Startup script de producción

📊 FUNCIONALIDADES:
- Campañas Meta Ads automáticas
- Análisis ML viral en tiempo real
- Automation coordinada multi-device
- Monitoreo y optimización continua
- ROI tracking y budget optimization

🎯 TARGET: Canal UCgohgqLVu1QPdfa64Vkrgeg
💰 BUDGET: €500/month inteligentemente distribuido
🚀 STATUS: PRODUCCIÓN COMPLETA OPERATIVA

--- a/.github/workflows/deploy-lightweight.yml
+++ b/.github/workflows/deploy-lightweight.yml
@@ -20,13 +20,14 @@ on:
           - bandwidth
           - performance
 
-env:
-  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
 jobs:
   deploy-lightweight:
     name: ⚡ Deploy Bandwidth Optimized
     runs-on: ubuntu-latest
+    
+    env:
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
     
     steps:
     - name: 📥 Checkout Repository
@@ -53,16 +54,15 @@ jobs:
         
     - name: 🚂 Install Railway CLI
       run: |
-        curl -fsSL https://railway.app/install.sh | sh
-        echo "$HOME/.railway/bin" >> $GITHUB_PATH
+        npm install -g @railway/cli
         
     - name: 🔐 Railway Login
       run: |
-        railway login --token ${{ secrets.RAILWAY_TOKEN }}
+        railway login --token $RAILWAY_TOKEN
         
     - name: 🎯 Set Railway Project Context
       run: |
-        railway link -p ${{ secrets.RAILWAY_PROJECT_ID }}
+        railway link -p $RAILWAY_PROJECT_ID
         
     - name: 🔧 Set Lightweight Environment Variables
       run: |
