--- a/railway.toml
+++ b/railway.toml
@@ -16,7 +16,7 @@ APP_NAME = "stakas-mvp-viral"
 
 # Deployment configuration
 [deploy]
-startCommand = "python -m uvicorn ml_core.api.main:app --host 0.0.0.0 --port $PORT --workers 2"
+startCommand = "python railway_launcher.py"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
