Integración automática de COCO en Dockerfile.ml-api para Railway v5, listo para build y producción

--- a/docker/Dockerfile.ml-api
+++ b/docker/Dockerfile.ml-api
@@ -16,10 +16,14 @@ RUN pip3 install --no-cache-dir -r requirements.txt -r requirements-ml.txt
 # Application code
 COPY ml_core /app/ml_core
 COPY config /app/config
+COPY scripts/download_coco_dataset.py /app/scripts/download_coco_dataset.py
 
 # Create necessary directories
 RUN mkdir -p /app/data/models/production \
     /app/data/models/checkpoints \
-    /app/data/datasets
+    /app/data/datasets/coco
+
+# Descargar COCO automáticamente en build (puedes comentar si no lo necesitas siempre)
+RUN python3 /app/scripts/download_coco_dataset.py
 
 CMD ["uvicorn", "ml_core.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
