--- a/.github/workflows/deploy-lightweight.yml
+++ b/.github/workflows/deploy-lightweight.yml
@@ -20,14 +20,13 @@ on:
           - bandwidth
           - performance
 
+env:
+  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
 jobs:
   deploy-lightweight:
     name: ⚡ Deploy Bandwidth Optimized
     runs-on: ubuntu-latest
-    
-    env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
     
     steps:
     - name: 📥 Checkout Repository
@@ -58,11 +57,11 @@ jobs:
         
     - name: 🔐 Railway Login
       run: |
-        railway login --token $RAILWAY_TOKEN
+        railway login --token ${{ secrets.RAILWAY_TOKEN }}
         
     - name: 🎯 Set Railway Project Context
       run: |
-        railway link -p $RAILWAY_PROJECT_ID
+        railway link -p ${{ secrets.RAILWAY_PROJECT_ID }}
         
     - name: 🔧 Set Lightweight Environment Variables
       run: |
