--- a/docker/Dockerfile.ml-api
+++ b/docker/Dockerfile.ml-api
@@ -23,7 +23,8 @@ RUN mkdir -p /app/data/models/production \
     /app/data/models/checkpoints \
     /app/data/datasets/coco
 
+
 # Descargar COCO automáticamente en build (puedes comentar si no lo necesitas siempre)
-RUN python3 /app/scripts/download_coco_dataset.py
+# RUN python3 /app/scripts/download_coco_dataset.py
 
 CMD streamlit run /app/scripts/conversational_dashboard.py --server.port 80 --server.headless true
