build: sistema unificado, dashboard interactivo, COCO y cross-platform

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: docker/Dockerfile.ml-api
+          file: docker/Dockerfile.unified-railway
           push: true
           tags: agora90/artista-dashboard:latest
+          platforms: linux/amd64,linux/arm64
