--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Cargar .env.dockerhub
+        id: dotenv
+        run: |
+          if [ -f .env.dockerhub ]; then
+            export $(grep -v '^#' .env.dockerhub | xargs)
+            echo "DOCKER_USER=$DOCKER_USER" >> $GITHUB_ENV
+            echo "DOCKER_PAT=$DOCKER_PAT" >> $GITHUB_ENV
+          fi
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PAT }}
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ env.DOCKER_PAT }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push
