--- a/.github/workflows/download_orbitadriver.yml
+++ b/.github/workflows/download_orbitadriver.yml
@@ -10,8 +10,9 @@ jobs:
   download-orbitadriver:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
   # uses: <corrige aquí el valor correcto de la acción o elimina si no se usa>
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Download OrbitaDriver
         run: |
           mkdir -p drivers/orbita
