--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# =============================
+# YouTube Uploader Local Example
+# =============================
+YOUTUBE_API_KEY=your-youtube-api-key
+YOUTUBE_CLIENT_ID=your-youtube-client-id
+YOUTUBE_CLIENT_SECRET=your-youtube-client-secret
+YOUTUBE_REFRESH_TOKEN=your-youtube-refresh-token
+YOUTUBE_CHANNEL_ID=your-youtube-channel-id
+CLIENT_SECRET=your-client-secret
+EMAIL=your-email@example.com
+DUMMY_MODE=true
 # Example .env file for the ML/Meta Ads system# TikTok ML System v4 - Production Environment Variables
 
 # Copy this file to .env and fill in your real values# Copy this file to .env and fill in your actual credentials
