--- a/docker/Dockerfile.unified-railway
+++ b/docker/Dockerfile.unified-railway
@@ -34,7 +34,7 @@ RUN mkdir -p /app/data/models/production /app/data/models/checkpoints /app/data/
 # Variables de entorno
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
-ENV DUMMY_MODE=false
+ENV DUMMY_MODE=true
 ENV ENVIRONMENT=production
 ENV STREAMLIT_SERVER_HEADLESS=true
 ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
