--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ telethon>=1.29.0
 cryptg>=0.4.0
 
 # Documentation and Analytics Dashboard
-streamlit>=1.28.0
+gradio>=4.0.0
 plotly>=5.15.0
 GitPython>=3.1.0
 python-dateutil>=2.8.0
@@ -75,7 +75,7 @@ flake8>=6.0.0
 tqdm>=4.65.0
 
 # Dashboard and Visualization - Added for viral analysis dashboards
-streamlit>=1.28.0
+#streamlit>=1.28.0
 plotly>=5.17.0
 dash>=2.14.0
 dash-bootstrap-components>=1.5.0
@@ -124,3 +124,6 @@ gunicorn>=21.2.0
 schedule>=1.2.0
 psutil>=5.9.0
 pyyaml>=6.0
+
+# Additional Package
+gradio>=4.0.0
